[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

[project]
name = "gradio-hello"
dynamic = [ "version" ]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = [  ]
authors = [
  { name = "Masato Ota", email = "ohtam@nec.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [ "gradio" ]

[project.urls]
Documentation = "https://github.com/Masato Ota/gradio-hello#readme"
Issues = "https://github.com/Masato Ota/gradio-hello/issues"
Source = "https://github.com/Masato Ota/gradio-hello"

[tool.hatch.version]
path = "src/gradio_hello/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/gradio_hello tests}"

[tool.coverage.run]
source_pkgs = [
  "gradio_hello",
  "tests",
]
branch = true
parallel = true
omit = [
  "src/gradio_hello/__about__.py",
]

[tool.coverage.paths]
gradio_hello = [
  "src/gradio_hello",
  "*/gradio-hello/src/gradio_hello",
]
tests = [
  "tests",
  "*/gradio-hello/tests",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.envs.default.scripts]
dev = "gradio src/gradio_hello/main.py"
# ↑ see https://www.gradio.app/guides/developing-faster-with-reload-mode#python-ide-reload
preview = "python src/gradio_hello/main.py"

[project.scripts]
gradio-hello = "gradio_hello.main:main"
